--- a/hihi-massigura/.classpath
+++ b/hihi-massigura/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="E:/git/hihi-massigura/hihi-massigura/WebContent/WEB-INF/lib/commons-net-3.7.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
